# LocationAndMapping

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: YAML.cmake  g2o.cmake  glog.cmake
config/: lidar.yaml  loam_config.yaml  velo_lidar1.yaml
config/back_end/: back_end.yaml
config/front_end/: front_end.yaml  scan_to_map.yaml  scan_to_scan.yaml
config/save_path/: save_path_config.yaml
include/data_pretreat/: imu_preintegrate.hpp
include/data_struct/: pose_struct.hpp  register_struct.hpp  tic_toc.hpp
include/global_defination/: global_defination.h.in
include/mapping/back_end/: back_end.hpp  back_end_flow.hpp
include/mapping/front_end/: front_end.hpp  front_end_flow.hpp
include/modules/cloud_filter/: box_filter.hpp  cloud_filter_interface.hpp  no_filter.hpp  voxel_filter.hpp
include/modules/feature_extract/: feature_extract_interface.hpp  go_feature_extract.hpp  normal_feature_extract.hpp  point_cloud_pretreatment.hpp
include/modules/map/: map_handle_interface.hpp  map_process.hpp  map_variable.hpp  submap_process.hpp
include/modules/matching/: interface_matching.hpp  scan_to_map.hpp  scan_to_scan.hpp
include/modules/optimization/g2o/: g2o_graph_optimization.hpp
include/modules/optimization/g2o/edge/: edge_se3_priorquat.hpp  edge_se3_priorxyz.hpp
include/modules/registration/: registration_interface.hpp
include/modules/registration/ICP/: aloam_registration.hpp  fast_registration.hpp  lidar_factor.hpp
include/modules/scan_adjust/: distortion_adjust.hpp
include/modules/transformation/: point_cloud_transformation.hpp  pose_transformation.hpp
include/publisher/: cloud_publisher.hpp  odometry_publisher.hpp  path_publisher.hpp
include/sensor_data/: gnss_data.hpp  imu_data.hpp  odometry_data.hpp  point_cloud_data.hpp  velocity_data.hpp
include/subscriber/: cloud_subscriber.hpp  duration_time_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  odometry_subscriber.hpp  path_subscriber.hpp  velocity_subscriber.hpp
include/tf_listener/: tf_listener.hpp
include/tools_/: file_manager.hpp  frame_rotate.hpp  print_info.hpp  tic_toc.hpp
launch/: run.launch  run_gnss_pub.launch
path_data/: lego_loam_result  path_.py
path_data/lego_loam/optimize_trajectory/: lego_loam_result  odome_path.txt  truth_path.txt
path_data/loam/optimize_trajectory/: loam_odome_path.txt  loam_truth_path.txt
path_data/loam_frame/optimize_trajectory/: odome_path.txt  truth_path.txt
rviz/: test.rviz
src/app/: back_end_node.cpp  front_end_node.cpp  save_path_node.cpp
src/data_pretreat/: imu_preintegrate.cpp
src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
src/mapping/front_end/: front_end.cpp  front_end_flow.cpp
src/modules/cloud_filter/: box_filter.cpp  no_filter.cpp  voxel_filter.cpp
src/modules/feature_extract/: go_feature_extract.cpp  normal_feature_extract.cpp
src/modules/map/: map_process.cpp  map_variable.cpp  submap_process.cpp
src/modules/matching/: scan_to_map.cpp  scan_to_scan.cpp
src/modules/optimization/g2o/: g2o_graph_optimization.cpp
src/modules/registration/ICP/: aloam_registration.cpp  fast_registration.cpp
src/modules/scan_adjust/: distortion_adjust.cpp
src/modules/transformation/: point_cloud_transformation.cpp  pose_transformation.cpp
src/publisher/: cloud_publisher.cpp  odometry_publisher.cpp  path_publisher.cpp
src/sensor_data/: gnss_data.cpp  imu_data.cpp  velocity_data.cpp
src/subscriber/: cloud_subscriber.cpp  duration_time_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  odometry_subscriber.cpp  path_subscriber.cpp  velocity_subscriber.cpp
src/tf_listener/: tf_listener.cpp
src/tools_/: file_manager.cpp  print_info.cpp
